modified the procedure to compose the  url to persistence.xml is formed
git-svn-id: svn://svn.forge.objectweb.org/svnroot/spagobi/V_3.x/Server/trunk@16630 99afaf0d-6903-0410-885a-c66a8bbb5f81